--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -20,8 +20,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-  - host: vinayak9769.tech
-    http:
+  - http:
       paths:
       - path: /
         pathType: Prefix
