Enhance load testing functionality: - Update Dockerfile to include necessary packages. - Modify JWT generation to include username. - Implement metrics streaming and logging for load tests. - Refactor load test handler routes for better organization. - Improve load test worker script for handling HTTP headers. - Add pod log streaming functionality.

--- a/Dockerfile.worker
+++ b/Dockerfile.worker
@@ -1,8 +1,9 @@
 FROM alpine:latest
 
-RUN apk add --no-cache curl
+RUN apk add --no-cache bash curl bc jq
 
 COPY loadtest-worker.sh /usr/local/bin/
+
 RUN chmod +x /usr/local/bin/loadtest-worker.sh
 
-ENTRYPOINT ["/usr/local/bin/loadtest-worker.sh"]
+ENTRYPOINT ["/bin/bash", "/usr/local/bin/loadtest-worker.sh"]
