--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,3 +1,25 @@
+# === BACKEND DEPLOYMENT & SERVICE ===
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: loadtest-api-deployment
+  namespace: loadtest
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: loadtest-api
+  template:
+    metadata:
+      labels:
+        app: loadtest-api
+    spec:
+      containers:
+      - name: loadtest-api
+        image: vinayak9769/loadtest-api:latest
+        ports:
+        - containerPort: 8080
+---
 apiVersion: v1
 kind: Service
 metadata:
@@ -10,6 +32,44 @@ spec:
   - port: 80
     targetPort: 8080
   type: ClusterIP
+
+# === FRONTEND DEPLOYMENT & SERVICE ===
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: frontend-deployment
+  namespace: loadtest
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: frontend
+  template:
+    metadata:
+      labels:
+        app: frontend
+    spec:
+      containers:
+      - name: frontend
+        image: vinayak9769/frontend:latest
+        ports:
+        - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: frontend-service
+  namespace: loadtest
+spec:
+  selector:
+    app: frontend
+  ports:
+  - port: 80
+    targetPort: 80
+  type: ClusterIP
+
+# === INGRESS FOR BOTH BACKEND AND FRONTEND ===
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -22,10 +82,17 @@ spec:
   rules:
   - http:
       paths:
-      - path: /
+      - path: /api
         pathType: Prefix
         backend:
           service:
             name: loadtest-api-service
+            port:
+              number: 80
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: frontend-service
             port:
               number: 80
